fixed white space issue on projects section, adjusted height on about section so nav link when clicked properly aligns to section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,7 +70,7 @@ a.nav-link:hover {
 
 .about-content {
     padding: 4em;
-    height: 500px;
+    height: 550px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -188,6 +188,7 @@ a.nav-link:hover {
     color: ghostwhite;
     border-bottom-left-radius: 12px;
     border-bottom-right-radius: 12px;
+    white-space: nowrap;
 }
 
 .project-heading {
